fix: تحديثات واجهة الجداول وإصلاحات رقم الطلب وتعديلات القوائم المنسدلة

--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -336,7 +336,7 @@
                                                 {% elif service_type == 'transport' %}
                                                     <span class="badge bg-dark">نقل</span>
                                                 {% elif service_type == 'tailoring' %}
-                                                    <span class="badge bg-success">تفصيل</span>
+                                                    <span class="badge bg-success">تسليم</span>
                                                 {% endif %}
                                             {% endfor %}
                                         {% else %}
@@ -353,7 +353,7 @@
                                                 {% elif selected_type == 'transport' %}
                                                     <span class="badge bg-dark">نقل</span>
                                                 {% elif selected_type == 'tailoring' %}
-                                                    <span class="badge bg-success">تفصيل</span>
+                                                    <span class="badge bg-success">تسليم</span>
                                                 {% endif %}
                                             {% endfor %}
                                         {% endif %}
