--- a/orders/templates/orders/order_form.html
+++ b/orders/templates/orders/order_form.html
@@ -210,7 +210,7 @@
                                         <div class="form-check form-check-inline">
                                             <input class="form-check-input styled-radio" type="radio" name="order_type_selector" id="order_type_tailoring" value="tailoring">
                                             <label class="form-check-label" for="order_type_tailoring">
-                                                <i class="fas fa-cut me-2"></i> تفصيل
+                                                <i class="fas fa-cut me-2"></i> تسليم
                                             </label>
                                         </div>
                                     </div>
