--- a/orders/templates/orders/order_success.html
+++ b/orders/templates/orders/order_success.html
@@ -136,7 +136,7 @@
                                                     </span>
                                                 {% elif type == 'tailoring' %}
                                                     <span class="badge bg-success me-1">
-                                                        <i class="fas fa-cut me-1"></i> تفصيل
+                                                        <i class="fas fa-cut me-1"></i> تسليم
                                                     </span>
                                                 {% else %}
                                                     <span class="badge bg-secondary me-1">{{ type }}</span>
